force-app/main/default/objects/User/fields/AE_Number__c.field-meta.xml
<CustomField>
    <fullName>AE_Number__c</fullName>
    <description>The portfolio number assigned to the banker, US-4451</description>
    <externalId>true</externalId>
    <inlineHelpText>The portfolio number assigned to the banker</inlineHelpText>
    <label>AE Number</label>
    <length>7</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>