force-app/main/default/objects/User/fields/AssistantDesk__c.field-meta.xml
<CustomField>
    <fullName>AssistantDesk__c</fullName>
    <externalId>true</externalId>
    <label>AssistantDesk</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>