force-app/main/default/objects/User/fields/Birth_Day_Month__c.field-meta.xml
<CustomField>
    <fullName>Birth_Day_Month__c</fullName>
    <description>Stores the Users birthday in the format dd/mm

            (CRM Birthday Reminder Case# 207 C Reinecke 2010/09)</description>
    <inlineHelpText>Please enter the day and the month of the User&apos;s birthday. Format dd/mm (5 characters or less)</inlineHelpText>
    <label>Birth Day/Month</label>
    <length>5</length>
    <type>Text</type>
</CustomField>