force-app/main/default/objects/User/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>User Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>User_Division__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Bank Sector</fullName>
            </value>
            <value>
                <fullName>Base Metals</fullName>
            </value>
            <value>
                <fullName>Br71C Regional Sales</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Business Acquisition</fullName>
            </value>
            <value>
                <fullName>Business Banking Channel</fullName>
            </value>
            <value>
                <fullName>Business Banking Channel Head Office</fullName>
            </value>
            <value>
                <fullName>Business Banking Head Office</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Buy-Side</fullName>
            </value>
            <value>
                <fullName>Cape Head</fullName>
            </value>
            <value>
                <fullName>Capital Markets</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>CDG</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>China/Africa</fullName>
            </value>
            <value>
                <fullName>CIB</fullName>
            </value>
            <value>
                <fullName>Client Access</fullName>
            </value>
            <value>
                <fullName>Client Coverage</fullName>
            </value>
            <value>
                <fullName>Client Onboarding</fullName>
            </value>
            <value>
                <fullName>Client Service</fullName>
            </value>
            <value>
                <fullName>Client Services Operation</fullName>
            </value>
            <value>
                <fullName>Client Solutions</fullName>
            </value>
            <value>
                <fullName>Coastal Region</fullName>
            </value>
            <value>
                <fullName>Commercial Banking Channel</fullName>
            </value>
            <value>
                <fullName>Commercial Banking Channel Head Office</fullName>
            </value>
            <value>
                <fullName>Commercial Banking Head Office</fullName>
            </value>
            <value>
                <fullName>Commodities</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>