force-app/main/default/objects/User/fields/Calendar_Day_Start__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Day_Start__c</fullName>
    <description>Converts the User&apos;s start of Day picklist value to a numeric value for use in the Shared Calendar Plugin</description>
    <formula>VALUE(TEXT( StartDay ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar Day Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>