force-app/main/default/objects/User/fields/Closed_Client_Cases__c.field-meta.xml
<CustomField>
    <fullName>Closed_Client_Cases__c</fullName>
    <description>EN-0777 – Number of Closed Client Cases this year</description>
    <inlineHelpText>Number of Closed Client Cases this year</inlineHelpText>
    <label>Closed Client Cases</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>