force-app/main/default/objects/User/fields/Complete_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Complete_Tasks__c</fullName>
    <description>EN-0777 – Number of Open Client Tasks with due date in this year</description>
    <inlineHelpText>Number of Open Client Tasks with due date in this year</inlineHelpText>
    <label>Complete Tasks</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>