force-app/main/default/objects/User/fields/Contact_Sync_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Sync_ID__c</fullName>
    <description>Field that holds the contact ID for the user. Case# 150 - manual update currently for Event Reporting, created by Rudolf Niehaus. Will eventually gets updated by a trigger implemented with Case# 530</description>
    <inlineHelpText>Field that holds the Contact ID for the User (18 characters or less)</inlineHelpText>
    <label>Contact Sync ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>