force-app/main/default/objects/User/fields/CRT_ID__c.field-meta.xml
<CustomField>
    <fullName>CRT_ID__c</fullName>
    <externalId>true</externalId>
    <label>CRT ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>