force-app/main/default/objects/User/fields/Dialing_code__c.field-meta.xml
<CustomField>
    <fullName>Dialing_code__c</fullName>
    <label>Dialing code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>