force-app/main/default/objects/User/fields/External_Core_Meetings_Attended__c.field-meta.xml
<CustomField>
    <fullName>External_Core_Meetings_Attended__c</fullName>
    <description>EN-0777 – Number of External Core Events attended this year</description>
    <inlineHelpText>Number of External Core Events attended this year</inlineHelpText>
    <label>External Core Meetings Attended</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>