force-app/main/default/objects/User/fields/External_Day_to_Day_Meetings_Attended__c.field-meta.xml
<CustomField>
    <fullName>External_Day_to_Day_Meetings_Attended__c</fullName>
    <description>EN-0777 – Number of External Day to Day Events attended this year</description>
    <inlineHelpText>Number of External Day to Day Events attended this year</inlineHelpText>
    <label>External Day to Day Meetings Attended</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>