force-app/main/default/objects/User/fields/Force_Owner_to_Add_Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Force_Owner_to_Add_Opportunity_Product__c</fullName>
    <defaultValue>true</defaultValue>
    <description>EMEA_SOW_StandardBank_009: Requirement 159: Navigate Owner To Create Product After Opportunity Creation</description>
    <inlineHelpText>After I create an Opportunity, redirect me (the Owner) to create the first Product.</inlineHelpText>
    <label>Force Owner to Add Opportunity Product</label>
    <type>Checkbox</type>
</CustomField>