force-app/main/default/objects/User/fields/Frozen_Account__c.field-meta.xml
<CustomField>
    <fullName>Frozen_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ideas Inc: Sheldon Lazarus
            This field will indicate if a user account is frozen</description>
    <inlineHelpText>Tick to indicate Frozen Account</inlineHelpText>
    <label>Frozen Account</label>
    <type>Checkbox</type>
</CustomField>