force-app/main/default/objects/User/fields/Frozen_Date__c.field-meta.xml
<CustomField>
    <fullName>Frozen_Date__c</fullName>
    <description>This field will store the frozen date when a user is actually deactivated</description>
    <inlineHelpText>Frozen date of User</inlineHelpText>
    <label>Frozen Date</label>
    <type>Date</type>
</CustomField>