force-app/main/default/objects/User/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <description>US-3524 This field was created for Angola Branch functionality to indicate the function of the user.</description>
    <inlineHelpText>This field was created for Angola Branch functionality to indicate the function of the user.</inlineHelpText>
    <label>Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branch Manager</fullName>
            </value>
            <value>
                <fullName>Branch Agent</fullName>
            </value>
            <value>
                <fullName>Line Manager</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Officer</fullName>
            </value>
            <value>
                <fullName>Team Leader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>