force-app/main/default/objects/User/fields/Incomplete_Client_Cases__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Client_Cases__c</fullName>
    <description>EN-0777 – Number of Open Client Cases</description>
    <inlineHelpText>Number of Open Client Cases</inlineHelpText>
    <label>Incomplete Client Cases</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>