force-app/main/default/objects/User/fields/Incomplete_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Tasks__c</fullName>
    <description>EN-0777 – Number of Closed Client Tasks</description>
    <inlineHelpText>Number of Closed Client Tasks</inlineHelpText>
    <label>Incomplete Tasks</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>