force-app/main/default/objects/User/fields/Internal_Core_Meetings_Attended__c.field-meta.xml
<CustomField>
    <fullName>Internal_Core_Meetings_Attended__c</fullName>
    <description>EN-0777 – Number of Internal Core Events Attended this year</description>
    <inlineHelpText>Number of Internal Core Events Attended this year</inlineHelpText>
    <label>Internal Core Meetings Attended</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>