force-app/main/default/objects/User/fields/Internal_Day_to_Day_Meetings_Attended__c.field-meta.xml
<CustomField>
    <fullName>Internal_Day_to_Day_Meetings_Attended__c</fullName>
    <description>EN-0777 – Number of Internal Day to Day Events attended this year</description>
    <inlineHelpText>Number of Internal Day to Day Events attended this year</inlineHelpText>
    <label>Internal Day to Day Meetings Attended</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>