force-app/main/default/objects/User/fields/License_Category__c.field-meta.xml
<CustomField>
    <fullName>License_Category__c</fullName>
    <description>US-4157 - field is required to detail the type of license category that a user has. This field is used in the My Access integration to exclude users from being deactivated if they never log in.</description>
    <inlineHelpText>The manner in which the user utilises the Salesforce license. Currently used as an exception for users that are not required to login but still require a license.</inlineHelpText>
    <label>License Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No login required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>