force-app/main/default/objects/User/fields/ltnadptn__Can_Use_Lightning__c.field-meta.xml
<CustomField>
    <fullName>ltnadptn__Can_Use_Lightning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field contains a copy of the value of the user permission PermissionslightningExperienceUser.  If TRUE, this user sees a link in the profile menu to switch to Lightning or back to Classic.  If FALSE, this user cannot navigate to Lightning.</description>
    <inlineHelpText>This field contains a copy of the value of the user permission PermissionslightningExperienceUser.  If TRUE, this user sees a link in the profile menu to switch to Lightning or back to Classic.  If FALSE, this user cannot navigate to Lightning.</inlineHelpText>
    <label>Can Use Lightning</label>
    <type>Checkbox</type>
</CustomField>