force-app/main/default/objects/User/fields/ltnadptn__Using_Lightning__c.field-meta.xml
<CustomField>
    <fullName>ltnadptn__Using_Lightning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, this user&apos;s next login or clicks will load Lightning.  If false, the user&apos;s next login or clicks will load Classic.  This is updated using scheduled code, so the values may lag if users have switched to Classic or Lightning from their profile menu recently.</description>
    <inlineHelpText>If true, this user&apos;s next login or clicks will load Lightning.  If false, the user&apos;s next login or clicks will load Classic.  This is updated using scheduled code, so the values may lag if users have switched to Classic or Lightning from their profile men</inlineHelpText>
    <label>Using Lightning?</label>
    <type>Checkbox</type>
</CustomField>