force-app/main/default/objects/User/fields/Machine_Number__c.field-meta.xml
<CustomField>
    <fullName>Machine_Number__c</fullName>
    <description>C-00006661.
            2012-06-12.
            Field used to store the User&apos;s Standard Bank issued machine number.</description>
    <inlineHelpText>Laptop or desktop number used for software updates with CIB IT Helpdesk (255 characters or less)</inlineHelpText>
    <label>Machine Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>