force-app/main/default/objects/User/fields/Machine_setup__c.field-meta.xml
<CustomField>
    <fullName>Machine_setup__c</fullName>
    <description>Additional field on user to track machine type.</description>
    <label>Machine Setup</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Windows 7 Laptop</fullName>
            </value>
            <value>
                <fullName>Windows 7 Desktop</fullName>
            </value>
            <value>
                <fullName>Windows 7 GM Laptop 64 Bit</fullName>
            </value>
            <value>
                <fullName>Windows 7 GM Desktop 64 Bit</fullName>
            </value>
            <value>
                <fullName>XP Machine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>