force-app/main/default/objects/User/fields/Non_SBG_User__c.field-meta.xml
<CustomField>
    <fullName>Non_SBG_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to track a Non-SBG User</description>
    <inlineHelpText>Field to track a Non-SBG User</inlineHelpText>
    <label>Non-SBG User</label>
    <type>Checkbox</type>
</CustomField>