force-app/main/default/objects/User/fields/Opportunities_from_External_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_from_External_Meetings__c</fullName>
    <description>EN-0777 – Count of Opportunities that originated from External Meetings attended this year</description>
    <inlineHelpText>Count of Opportunities that originated from External Meetings attended this year</inlineHelpText>
    <label>Opportunities from External Meetings</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>