force-app/main/default/objects/User/fields/Ping_UUID__c.field-meta.xml
<CustomField>
    <fullName>Ping_UUID__c</fullName>
    <description>Ping user ID used to correlate the Ping user, Salesforce user and contact SFP-7347</description>
    <inlineHelpText>Identity used in Ping</inlineHelpText>
    <label>Ping UUID</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>