force-app/main/default/objects/User/fields/Provincial_Pricing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Provincial_Pricing_Manager__c</fullName>
    <description>US-1588 CommB - CMS - 10 - Pricing Team Approves Concession Request</description>
    <label>Provincial Pricing Manager</label>
    <relationshipName>PPM</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>