force-app/main/default/objects/User/fields/Reason_User_Is_Frozen__c.field-meta.xml
<CustomField>
    <fullName>Reason_User_Is_Frozen__c</fullName>
    <description>Field stores the reason why user is frozen</description>
    <inlineHelpText>Why is User being Frozen</inlineHelpText>
    <label>Reason User Is Frozen</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User Being Offboarded</fullName>
            </value>
            <value>
                <fullName>User Being Migrated</fullName>
            </value>
            <value>
                <fullName>User on Maternity Leave</fullName>
            </value>
            <value>
                <fullName>User on Sabbatical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>