force-app/main/default/objects/User/fields/SA_Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>SA_Cost_Centre__c</fullName>
    <inlineHelpText>Recorded for acknowledgement of licence cost, and this should be aligned with the User&apos;s team  (255 characters or less)</inlineHelpText>
    <label>Cost Centre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>