force-app/main/default/objects/User/fields/SA_Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>SA_Domain_Name__c</fullName>
    <description>Revashlin &gt; 13113012 &gt;&gt; Removed default value of SCMBNT1. Field is now used Globally.</description>
    <inlineHelpText>Login Domain Name used to identify Standard Bank network access (i.e. scmbnt1/scmbntldn)  (80 characters or less)</inlineHelpText>
    <label>Domain Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>