force-app/main/default/objects/User/fields/SA_Domain_UserName__c.field-meta.xml
<CustomField>
    <fullName>SA_Domain_UserName__c</fullName>
    <description>SHAVEEN06DEC2010CASE599 &gt; This is the Unique ID that will be used to identify the unique USER across USER, CONTACT and ACTIVE DIRECTORY.

            Revashlin &gt; 13112013 &gt;&gt; Changed Label to NT Username, field is required for reporting purposes and Altiris rollouts. Removed help text, no longer applicable to use of field.</description>
    <inlineHelpText>Login Username used to log into Standard Bank network access (i.e. doej/smithj)  (80 characters or less)</inlineHelpText>
    <label>NT Username</label>
    <length>80</length>
    <type>Text</type>
</CustomField>