force-app/main/default/objects/User/fields/Salesforce_for_Outlook__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_for_Outlook__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate if the user has Salesforce for Outlook installed</description>
    <label>Salesforce for Outlook</label>
    <type>Checkbox</type>
</CustomField>