force-app/main/default/objects/User/fields/SingletrackCMS__Analytics_Bloomberg_Email__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Analytics_Bloomberg_Email__c</fullName>
    <label>Analytics Bloomberg Email</label>
    <type>Email</type>
</CustomField>