force-app/main/default/objects/User/fields/SingletrackCMS__Call_List_Colour_Coding__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Call_List_Colour_Coding__c</fullName>
    <label>Call List Colour Coding</label>
    <type>TextArea</type>
</CustomField>