force-app/main/default/objects/User/fields/SingletrackCMS__Call_List_Fields__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Call_List_Fields__c</fullName>
    <label>Call List Fields</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>