force-app/main/default/objects/User/fields/SingletrackCMS__Call_Manager_Colour_Reset_Datetime__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Call_Manager_Colour_Reset_Datetime__c</fullName>
    <label>Call Manager Colour Reset Datetime</label>
    <type>DateTime</type>
</CustomField>