force-app/main/default/objects/User/fields/SingletrackCMS__CIA_Password__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__CIA_Password__c</fullName>
    <label>CIA Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>