force-app/main/default/objects/User/fields/SingletrackCMS__CIA_UID__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__CIA_UID__c</fullName>
    <label>CIA UID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>