force-app/main/default/objects/User/fields/SingletrackCMS__Client_Activity_Tagging_Mode__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Client_Activity_Tagging_Mode__c</fullName>
    <description>The display mode for Interaction tagging.</description>
    <inlineHelpText>The display mode for Client Activity tagging.</inlineHelpText>
    <label>Interaction Tagging Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Omnibox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>