force-app/main/default/objects/User/fields/SingletrackCMS__Default_Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Default_Interaction_Type__c</fullName>
    <label>Default Interaction Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>