force-app/main/default/objects/User/fields/SingletrackCMS__Default_Tagging_Mode__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Default_Tagging_Mode__c</fullName>
    <description>The default display mode in tagging.</description>
    <inlineHelpText>The default display mode in tagging.</inlineHelpText>
    <label>Default Tagging Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Omnibox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>