force-app/main/default/objects/User/fields/SingletrackCMS__Disclosures_URL__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Disclosures_URL__c</fullName>
    <label>Disclosures URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>