force-app/main/default/objects/User/fields/SingletrackCMS__Enable_Assign_Task__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Enable_Assign_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Assign Task</label>
    <type>Checkbox</type>
</CustomField>