force-app/main/default/objects/User/fields/SingletrackCMS__Enable_Send_As__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Enable_Send_As__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Send As</label>
    <type>Checkbox</type>
</CustomField>