force-app/main/default/objects/User/fields/SingletrackCMS__External_Id__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__External_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>External Id</inlineHelpText>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>