force-app/main/default/objects/User/fields/SingletrackCMS__Filtered_Roadshow_Types__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Filtered_Roadshow_Types__c</fullName>
    <label>Filtered Roadshow Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>