force-app/main/default/objects/User/fields/SingletrackCMS__Ingenius_Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Ingenius_Agent_Id__c</fullName>
    <label>Ingenius Agent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>