force-app/main/default/objects/User/fields/SingletrackCMS__Ingenius_Agent_Instrument__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Ingenius_Agent_Instrument__c</fullName>
    <label>Ingenius Agent Instrument</label>
    <length>255</length>
    <type>Text</type>
</CustomField>