force-app/main/default/objects/User/fields/SingletrackCMS__Ingenius_Email__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Ingenius_Email__c</fullName>
    <label>Ingenius Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>