force-app/main/default/objects/User/fields/SingletrackCMS__Ingenius_Hotdesk_PIN__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Ingenius_Hotdesk_PIN__c</fullName>
    <label>Ingenius Hotdesk PIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>