force-app/main/default/objects/User/fields/SingletrackCMS__Ingenius_Password__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Ingenius_Password__c</fullName>
    <label>Ingenius Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>