force-app/main/default/objects/User/fields/SingletrackCMS__Ingenius_Primary_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Ingenius_Primary_Line_Number__c</fullName>
    <label>Ingenius Primary Line Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>