force-app/main/default/objects/User/fields/SingletrackCMS__Ingenius_Work_Mode__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Ingenius_Work_Mode__c</fullName>
    <label>Ingenius Work Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUTO_IN</fullName>
            </value>
            <value>
                <fullName>MANUAL_IN</fullName>
            </value>
            <value>
                <fullName>AFTER_CALL_WORK</fullName>
            </value>
            <value>
                <fullName>AUX_WORK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>