force-app/main/default/objects/User/fields/SingletrackCMS__Last_Viewed_Call_List_Id__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Last_Viewed_Call_List_Id__c</fullName>
    <label>Last Viewed Call List Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>