force-app/main/default/objects/User/fields/SingletrackCMS__Last_Viewed_Web_Document_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Last_Viewed_Web_Document_Folder_Id__c</fullName>
    <label>Last Viewed Web Document Folder Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>