force-app/main/default/objects/User/fields/SingletrackCMS__Last_Viewed_Web_Document_Library_Id__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__Last_Viewed_Web_Document_Library_Id__c</fullName>
    <label>Last Viewed Web Document Library Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>