force-app/main/default/objects/User/fields/SingletrackCMS__License_Type__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__License_Type__c</fullName>
    <formula>Profile.UserLicense.Name</formula>
    <label>License Type</label>
    <type>Text</type>
</CustomField>