force-app/main/default/objects/User/fields/SingletrackCMS__MailJob_Summary_Report__c.field-meta.xml
<CustomField>
    <fullName>SingletrackCMS__MailJob_Summary_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MailJob Summary Report</label>
    <type>Checkbox</type>
</CustomField>